--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="draw-toolbar">
         <button id="start-draw">开启绘图</button>
         <button id="clear-draw">清除绘图</button>
-        <button id="reset-map" title="重置地图交互状态">🔄</button>
+        <button id="reset-map" onclick="window.location.href='newpage.html'" title="跳转介绍页">购房信息</button>
     </div>
 
     <!-- Canvas 绘图层 -->
