--- a/newpage.html
+++ b/newpage.html
@@ -311,7 +311,7 @@
                     <div class="slide-content">
                         <h1 class="slide-title">深圳购房 1对1购房分析 专业分析找房不踩坑</h1>
                         <div class="contact-info">专业购房顾问为您服务</div>
-                        <div class="contact-phone">150 1793 0126</div>
+                        <div class="contact-phone"> &#9742; 150 1793 0126</div>
                     </div>
                     <div class="slide-image-container">
                         <img src="weixin.jpg" alt="微信二维码" class="slide-image">
