--- a/newpage.html
+++ b/newpage.html
@@ -329,7 +329,7 @@
                 </div>
                 <div class="carousel-slide">
                     <div class="slide-content">
-                        <h1 class="slide-title">深圳新房全城代理 专车接送路线规划 看房更省心</h1>
+                        <h1 class="slide-title">看房专车接送 提前路线规划 看房更省心</h1>
                         <div class="contact-info">贴心服务，安心看房</div>
                         <div class="contact-phone"> &#9742; 150 1793 0126</div>
                     </div>
