--- a/newpage.html
+++ b/newpage.html
@@ -361,7 +361,7 @@
             <div class="carousel-container">
                 <div class="carousel-slide active">
                     <div class="slide-content">
-                        <h1 class="slide-title">深圳购房 1对1购房分析 专业分析找房不踩坑</h1>
+                        <h1 class="slide-title">深圳购房 1对1购房分析 专业分析 买房不踩坑</h1>
                         <div class="contact-info">专业购房顾问为您服务</div>
                         <div class="contact-phone"> &#9742; 150 1793 0126</div>
                     </div>
