--- a/newpage.html
+++ b/newpage.html
@@ -363,7 +363,7 @@
                     <div class="slide-content">
                         <h1 class="slide-title">深圳购房 1对1购房分析 专业分析 买房不踩坑</h1>
                         <div class="contact-info">专业购房顾问为您服务</div>
-                        <div class="contact-phone"> &#9742; 150 1793 0126</div>
+                        <div class="contact-phone"> &#9742; 176 7311 9782</div>
                     </div>
                     <div class="slide-image-container">
                         <img src="weixin.jpg" alt="微信二维码" class="slide-image">
@@ -373,7 +373,7 @@
                     <div class="slide-content">
                         <h1 class="slide-title">购新房享额外折扣 佣金返现 买房更优惠</h1>
                         <div class="contact-info">更多优惠等您来询</div>
-                        <div class="contact-phone"> &#9742; 150 1793 0126</div>
+                        <div class="contact-phone"> &#9742; 176 7311 9782</div>
                     </div>
                     <div class="slide-image-container">
                         <img src="weixin.jpg" alt="微信二维码" class="slide-image">
@@ -383,7 +383,7 @@
                     <div class="slide-content">
                         <h1 class="slide-title">看房专车接送 提前路线规划 看房更省心</h1>
                         <div class="contact-info">贴心服务，安心看房</div>
-                        <div class="contact-phone"> &#9742; 150 1793 0126</div>
+                        <div class="contact-phone"> &#9742; 176 7311 9782</div>
                     </div>
                     <div class="slide-image-container">
                         <img src="weixin.jpg" alt="微信二维码" class="slide-image">
@@ -399,7 +399,7 @@
 
         <!-- 新房推荐部分 -->
         <div class="section">
-            <h2 class="section-title">设置新盘查询</h2>
+            <h2 class="section-title">深圳新房信息</h2>
             <div class="recommendation-grid" id="propertyGrid">
                 <!-- 新房数据将通过JavaScript动态生成 -->
             </div>
@@ -409,7 +409,10 @@
         <div class="property-data">
             <div data-name="深圳新房项目(在售待售楼盘)" data-url="https://tan-0001.github.io/szxf/"></div>
             <div data-name="深圳新房佣金(项目佣金查询)" data-url="https://tan-0001.github.io/szxf/yongjin.html"></div>
-            <div data-name="联系看房(&#9742;150 1793 0126)" data-url=""></div>
+            <div data-name="联系看房(&#9742;176 7311 9782)" data-url=""></div>
+            <div data-name="深圳新房预售备案信息查询" data-url="https://zjj.sz.gov.cn/szfdcscjy/#/presaleHouse/presaleHouseList"></div>
+            <div data-name="深圳新房项目规划和平面图" data-url="https://pnr.sz.gov.cn/xxgk/gggs/index.html"></div>
+            <div data-name="学区范围查询(仅供参考)" data-url="https://tan-0001.github.io/szxf/school.html"></div>
         </div>
 
         <!-- 学区地图部分 -->
@@ -440,6 +443,7 @@
             <div class="tools-grid">
                 <a href="https://mp.weixin.qq.com/s/qYTqH2ZElCRvTiZrGfOWsw" class="tool-btn">入学政策积分查询</a>
                 <a href="https://spatydz.sz.gov.cn/web/index.html#/" class="tool-btn">房源编码查询</a>
+                <a href="https://pnr.sz.gov.cn/d-ghrer/reroosp/ytcf" class="tool-btn">居住权查询</a>
                 <a href="https://www.szpgzx.com/pgjcxApp/cx.jsp" class="tool-btn">房产评估系统</a>
                 <a href="https://zjj.sz.gov.cn:8004/" class="tool-btn">房地产信息系统</a>
                 <a href="https://www.fangdailixi.com/" class="tool-btn">房贷计算器</a>
@@ -519,7 +523,7 @@
                 luohu: 'https://zs.szlh.org.cn/visitlhgbxyxqdt',
                 nanshan: 'https://nszs.szns.gov.cn/visitnsgbxyxqdt',
                 yantian: 'https://www.yantian.gov.cn/cn/service/zdywly/xwsq/xyxwsq/ljxqhf/content/post_11345266.html',
-                baoan: 'https://www.baoan.gov.cn/jyj/zwgk/zdly/zsxx/content/post_11398657.html',
+                baoan: 'https://www.baoan.gov.cn/zxbs/jy/ywjy/xqhf/content/post_12212943.html',
                 longgang: 'https://zsbm.lggov.cn/visitlggbxyxqdt',
                 longhua: 'https://zsjz.szlhq.gov.cn:8090/visitlhuagbxyxqdt',
                 pingshan: 'https://zsbm.szpsq.org.cn/visitpsgbxyxqdt',
@@ -531,7 +535,7 @@
                 luohu: 'https://zs.szlh.org.cn/visitlhgbcyxqdt',
                 nanshan: 'https://nszs.szns.gov.cn/visitnsgbcyxqdt',
                 yantian: 'https://www.yantian.gov.cn/cn/service/zdywly/xwsq/zyxwsq/ljxqhf/content/post_11345061.html',
-                baoan: 'https://www.baoan.gov.cn/jyj/zwgk/zdly/zsxx/content/post_11398657.html',
+                baoan: 'https://www.baoan.gov.cn/zxbs/jy/ywjy/xqhf/content/post_12212943.html',
                 longgang: 'https://zsbm.lggov.cn/visitlggbcyxqdt',
                 longhua: 'https://zsjz.szlhq.gov.cn:8090/visitlhuagbcyxqdt',
                 pingshan: 'https://zsbm.szpsq.org.cn/visitpsgbcyxqdt',
