--- a/school.html
+++ b/school.html
@@ -21,7 +21,7 @@
     <div id="disclaimer-modal" class="disclaimer-modal no-select">
         <div class="disclaimer-overlay"></div>
         <div class="disclaimer-box">
-            <p class="disclaimer-text">学区范围为个人制作仅供参考，详细学区信息请咨询教育局。</p>
+            <p class="disclaimer-text">学区范围为个人制作仅供参考，详细学区信息请咨询教育局。更新于2026.1.30</p>
             <button id="disclaimer-close-btn" class="disclaimer-close-btn no-select" type="button">我知道了</button>
         </div>
     </div>
@@ -64,3 +64,4 @@
     <canvas id="draw-canvas"></canvas>
 </body>
 </html>
+
