--- a/school.html
+++ b/school.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>学区信息展示</title>
     <link rel="stylesheet" href="school.css">
     <script type="text/javascript">
@@ -34,7 +34,7 @@
         <div class="toolbar-buttons">
             <button id="start-draw" class="no-select">开启绘图</button>
             <button id="clear-draw" class="no-select">清除绘图</button>
-            <button id="pick-location-btn" class="no-select" type="button" title="点击后在地图上点选位置，查询该位置对应的小学、初中学区">点选位置</button>
+            <button id="pick-location-btn" class="no-select" type="button" title="点击查询">点选位置</button>
         </div>
         
         <!-- 颜色选择面板 -->
@@ -64,4 +64,3 @@
     <canvas id="draw-canvas"></canvas>
 </body>
 </html>
-
