--- a/newpage.html
+++ b/newpage.html
@@ -408,7 +408,7 @@
         <!-- 隐藏的新房数据 -->
         <div class="property-data">
             <div data-name="深圳新房项目(在售待售楼盘)" data-url="https://tan-0001.github.io/szxf/"></div>
-            <div data-name="深圳新房佣金(项目佣金查询)" data-url="https://tan-0001.github.io/szxf/yongjin.html"></div>
+            <div data-name="新安楼盘分布(演示地图)" data-url="https://tan-0001.github.io/szxf/loupan.html"></div>
             <div data-name="联系看房(&#9742;176 7311 9782)" data-url=""></div>
             <div data-name="深圳新房预售备案信息查询" data-url="https://zjj.sz.gov.cn/szfdcscjy/#/presaleHouse/presaleHouseList"></div>
             <div data-name="深圳新房项目规划和平面图" data-url="https://pnr.sz.gov.cn/xxgk/gggs/index.html"></div>
@@ -590,3 +590,4 @@
     </script>
 </body>
 </html>
+
